# Sirius-Tune

./: CMakeLists.txt  CMakePresets.json  README.md
Tune/: CMakeLists.txt
Tune/res/: bruh.txt  startpos.epd  test.py  tune_results.txt  tune_results2.txt  tune_results_4.txt  tune_results_5.txt  tune_results_doubled.txt  tune_results_new.txt  tune_results_p2k-2.txt  tune_results_p2k-3.txt  tune_results_p2k-4.txt  tune_results_p2k.txt  tune_results_pesto.txt  tune_results_rank_file.txt
Tune/src/: board.cpp  board.h  error.cpp  error.h  eval_params.cpp  eval_params.h  extract.cpp  extract.h  main.cpp  optimize.cpp  optimize.h  pos.cpp  pos.h
